# cabinet-sim-v2

./: .gitignore  .gitmodules  CMakeLists.txt
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
